moved the drag to spatula grabber. updated the dragposition to be more precise and prevent jumpiness on down drag. added borders to show where the item will be dropped

--- a/src/views/dnd/grid.module.scss
+++ b/src/views/dnd/grid.module.scss
@@ -27,6 +27,14 @@
 	opacity: 0.7;
 }
 
-.dragOver {
-	border: solid 1px red;
+.dragOverUp {
+	border-top: solid 1px red;
+}
+
+.dragOverDown {
+	border-bottom: solid 1px red;
+}
+
+.spatula {
+	margin-right: rem(12px);
 }
